tweaks ->  font issues, scrolling on mobile, form buttons alignment

--- a/BouvetGrandPrixAngular/app/app.component.css
+++ b/BouvetGrandPrixAngular/app/app.component.css
@@ -243,6 +243,7 @@ div.modal-content{ /* Removes shadow from modal  */
     text-align: center;
     color:#f5f5f5;
     font-size:12px;
+    font-family: 'Kohinoor Bangla';
 }
 
 .navbar_bottom_box_name_text{
